# emcee

./: README.md
emcee_control/: CMakeLists.txt  package.xml
emcee_control/config/: emcee_control.yaml
emcee_control/launch/: control.launch  drive.launch
emcee_control/src/: joy_teleop.cpp
emcee_description/: CMakeLists.txt  arms.blend1  bucket.blend  bucket.blend1  chassis.blend1  package.xml  sled.blend1
emcee_description/launch/: display.launch  gazebo.launch
emcee_description/urdf/: emcee.gazebo  emcee.urdf.xacro
emcee_gazebo/: CMakeLists.txt  package.xml
emcee_gazebo/worlds/: nasa_minimal.world
